fixed height issue on mobile

--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: auto;
   background-color: hsl(233, 47%, 7%);
   padding: 1.5rem;
 }
